--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,3 +1,4 @@
+{{"<!-- begin header partial //-->" | safeHTML}}
 <!DOCTYPE html>
 <!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
 <!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
@@ -16,4 +17,4 @@
   <link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}css/reproach.css">
 
 </head>
-<body>
+<body class="reproach">
