--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,21 +1,34 @@
 {{ partial "header.html" . }}
 
-  {{- range (where .Data.Pages "Type" "in" (slice "article" "micro" "review" "link" )) }}
-	<pre> {{- printf "%#v" .Section }} </pre>
-	{{ if .Params.link }}
-	<h3><a href={{ .Params.link }}>{{ .Title }}</a></h3>
-	<small>{{ .Date.Format "Mon 2 Jan, 2006" }} | <a href="{{ .Permalink }}">&#9830;</a> </small>
-	{{ else if not .Title }}
-	<hr style="margin-left:calc(20%); margin-right:calc(20%); ">
-	{{ else }}
-    <h3><a href="{{ .Permalink }}">{{ .Title }}</a></h3>
-    <p><em>{{ .Date.Format "Mon 2 Jan, 2006" }}</em></p>
-	{{ end }}
-    {{- .Content }}
-    {{ if not .Title }}
-    <small><a href="{{ .Permalink }}">{{ .Date.Format "02/01/06 00:00" }}</a></small>
-    <hr style="margin-left:calc(20%); margin-right:calc(20%); ">
-    {{ end }}
-  {{ end }}
+<div class="reproach-body">
 
+	<main class="reproach-content">
+	  {{- range (where .Data.Pages "Type" "in" (slice "article" "micro" "review" "link" )) }}
+		<pre> {{- printf "%#v" .Section }} </pre>
+		{{ if .Params.link }}
+			<h2><a href={{ .Params.link }}>{{ .Title }}</a></h2>
+		{{ else if not .Title }}
+			<hr />
+		{{ else }}
+	    	<h2><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
+		{{ end }}
+
+		{{ partial "metadata.html" . }}
+
+	    {{- .Content }}
+
+	    {{ if not .Title }}
+			{{ partial "micrometadata.html" . }}
+	    {{ end }}
+
+	  {{ end }}
+
+	</main>
+
+	<nav class="reproach-nav">
+	<h1>View from Ascraeus</h1>
+	</nav>
+
+</div>
 {{ partial "footer.html" . }}
+
