--- a/layouts/section/article.html
+++ b/layouts/section/article.html
@@ -1,5 +1,9 @@
 {{ partial "header.html" . }}
 
+<div class="reproach-body">
+	<main class="reproach-content">
+
+
   <h1>Article</h1>
   {{- range where .Site.Pages "Section" "article" }}
     <h3><a href="{{ .Permalink }}">{{ .Title }}</a></h3>
@@ -7,6 +11,10 @@
     	<p>{{ .Date.Format "Mon Jan 2, 2006" }}&nbsp;&bull;~{{ .ReadingTime }} min read</p>
     </div>
   {{- end }}
-  <h4><a href="{{ .Site.BaseURL }}">Home</a></h4>
+	</main>
+
+{{ partial "sidebar.html" . }}
+	
+</div>
 
 {{ partial "footer.html" . }}
