--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -13,8 +13,18 @@
   ================================================== -->
 
   <title>{{ .Title }}</title>
+
+  <!-- Mobile Specific Metas
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- CSS
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+<!--  <link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}css/normalize.css"> -->
   <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400i|Libre+Franklin:400,600,700" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}css/reproach.css">
-
 </head>
-<body class="reproach">
+<body>
+<div class="container">
+	<div class="row">
+
