--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -1,6 +1,8 @@
 {{"<!-- begin sidebar partial //-->" | safeHTML}}
-<nav class="reproach-nav">
 
-	<h1><a href="{{ .Site.BaseURL }}">View from Ascraeus</a></h1>
+	<div class="column _25">
+		<nav>
+			<h1><a href="{{ .Site.BaseURL }}">View from Ascraeus</a></h1>
+		</nav>
+	</div>
 
-</nav>
