--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -25,6 +25,6 @@
   <link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}css/reproach.css">
 </head>
 <body>
-<div class="container">
-	<div class="row">
+<main>
+	<section>
 
