--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -1,8 +1,8 @@
 {{"<!-- begin sidebar partial //-->" | safeHTML}}
 
-	<div class="column _25">
+	<aside>
 		<nav>
 			<h1><a href="{{ .Site.BaseURL }}">View from Ascraeus</a></h1>
 		</nav>
-	</div>
+	</aside>
 
