--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -23,8 +23,9 @@
 <!--  <link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}css/normalize.css"> -->
   <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400i|Libre+Franklin:400,600,700" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}css/reproach.css">
+  <link rel="webmention" href="https://webmention.herokuapp.com/api/webmention" />
 </head>
 <body>
-<main>
-	<section>
+	<main>
+		<section>
 
