--- a/layouts/micro/single.html
+++ b/layouts/micro/single.html
@@ -2,12 +2,9 @@
 {{ partial "sidebar.html" . }}
 
 
-<div class="col-9">
-	<main>
+	<content>
 	    {{- .Content }}
 	    <small><a href="{{ .Permalink }}">{{ .Date.Format "02/01/06 00:00" }}</a></small>
-	</main>
-
-</div>
+	</content>
 
 {{ partial "footer.html" . }} 
