--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -1,8 +1,30 @@
 {{"<!-- begin sidebar partial //-->" | safeHTML}}
 
 	<aside>
-		<nav>
-			<h1><a href="{{ .Site.BaseURL }}">View from Ascraeus</a></h1>
-		</nav>
+		<header>
+			<nav>
+				<div id="sitetitle">
+				<h1><a href="{{ .Site.BaseURL }}">View from Ascraeus</a></h1>
+				</div>
+				<ul>
+					<li><a href="about">about</a></li>
+					<li><a href="micro">micro</a></li>
+					<li><a href="rss">rss</a></li>
+					<li><a href="twitter">twitter</a></li>
+					<li><a href="archives">archives</a></li>
+				</ul>			
+                    <form method="get" id="search" action="https://duckduckgo.com/">
+                        <input type="hidden" name="sites" value="ascraeus.org" />
+                        <input type="hidden" name="ka" value="h" />
+                        <input type="hidden" name="k7" value="#fafafa" />
+                        <input type="hidden" name="kj" value="#3f3f3f" />
+                        <input type="hidden" name="ky" value="#fafafa" />
+                        <input type="hidden" name="kx" value="b" />
+                        <input type="hidden" name="kt" value="Helvetica" />
+                        <input type="text" name="q" maxlength="255" placeholder="Search" />
+                        <input type="submit" value="DuckDuckGo Search" style="visibility: hidden;" />
+                    </form>
+			</nav>
+		</header>
 	</aside>
 
