--- a/layouts/section/micro.html
+++ b/layouts/section/micro.html
@@ -1,9 +1,7 @@
 {{ partial "header.html" . }}
 {{ partial "sidebar.html" . }}
 
-
-<div>
-	<main>
+	<content>
 	  <h1>Microblog</h1>
 	  {{- range where .Site.Pages "Section" "micro" }}
 		<pre> {{- printf "%#v" . }} </pre>
@@ -11,7 +9,7 @@
 	    <small><a href="{{ .Permalink }}">{{ .Date.Format "02/01/06 00:00" }}</a></small>
 	  {{- end }}
 
-	</main>
+	</content>
 	
 </div>
 {{ partial "footer.html" . }}
