--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,8 @@
 {{"<!-- begin footer partial //-->" | safeHTML}}
-	</section>
-</main>
+		</section>
+	</main>
+	<footer>
+		<p class="feet">{{ .Site.Title }} &copy; {{ .Site.Author.name }} 2011-2016 &bull; Licenced under <a href="{{ .Site.BaseURL }}licence">CC-BY-NC-SA</a> &bull; Powered by <a href="http://pelican.readthedocs.org/en/latest/" title="Link to Pelican">pelican</a></p>
+	</footer>
 </body>
 </html>
