--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,6 +4,7 @@
 	<content>
 		
 		  {{- range (where .Data.Pages "Type" "in" (slice "article" "micro" "review" "link" )) }}
+		  <article>
 			{{ if .Params.link }}
 				<h2><a href={{ .Params.link }}>{{ .Title }}</a></h2>
 			{{ else if not .Title }}
@@ -18,10 +19,8 @@
 		    {{ if not .Title }}
 				{{ partial "micrometadata.html" . }}
 		    {{ end }}
-
+		</article>
 		  {{ end }}
-
-		
 
 	</content>
 
